--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,20 +122,26 @@ h2 { font-size: 20px;}
 	padding-right: 80px;
 	padding-left: 80px;
 }
-#output-panels {
-	
+
+#terminal-panel {
+	position: relative;
+	z-index: 99;
 }
 
 #terminal
 {
-	height: 200px;
-	background-color: black;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 120px;
+	background-image: url(/images/panel-background.png);
 	overflow:auto;
+	padding-top: 10px;
 }
 
 #terminal pre {
 	font-family: Monaco;
-	background-color: black;
+	background-color: transparent;
 	color: gray;
 	padding-top: 0px;
 	padding-bottom: 0px;
